Refactor Nginx configuration: streamline settings, update server ports, and enhance README for clarity

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,186 +1,38 @@
-
-#user  nobody;
 worker_processes 8;
-
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
 events {
     worker_connections 4096;
 }
-
 
 http {
     server_names_hash_bucket_size 64;
     include mime.types;
     default_type application/octet-stream;
-
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
     sendfile on;
-    #tcp_nopush     on;
-
-    #keepalive_timeout  0;
     keepalive_timeout 65;
-
-    #gzip  on;
 
     server {
         listen 80;
         server_name localhost;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
         location / {
-            return 404; # Block access by IP address
+            return 404;
         }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        # error_page   500 502 503 504  /50x.html;
-        # location = /50x.html {
-        #     root   html;
-        # }
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
+
+    upstream backend_servers {
+        server 54.255.182.118:5000;
+        server 54.255.182.118:5001;
+    }
+
     server {
-        listen 4000;
+        listen 3000;
         server_name localhost;
 
         location / {
-            proxy_pass http://localhost:5000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            # Additional settings if needed
-            # proxy_connect_timeout       600s;
-            # proxy_send_timeout          600s;
-            # proxy_read_timeout          600s;
-            # send_timeout                600s;
-
-            # Enable WebSocket support if needed
-            # proxy_http_version 1.1;
-            # proxy_set_header Upgrade $http_upgrade;
-            # proxy_set_header Connection "upgrade";
-        }
-        # Other server directives go here, if needed
-        location /api/products {
-            proxy_pass http://localhost:5001;
+            proxy_pass http://backend_servers;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        location /api/users {
-            proxy_pass http://localhost:5002;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /api/orders {
-            proxy_pass http://localhost:5003;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /api/config/paypal {
-            proxy_pass http://localhost:5004;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /api/upload {
-            proxy_pass http://localhost:5005;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        # Other server directives go here, if needed
     }
-    # server {
-    #     listen 80;
-    #     server_name test.example.com;
-
-    #     location / {
-    #         proxy_pass http://127.0.0.1:4000;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    # Additional settings if needed
-    # proxy_connect_timeout       600s;
-    # proxy_send_timeout          600s;
-    # proxy_read_timeout          600s;
-    # send_timeout                600s;
-
-    # Enable WebSocket support if needed
-    # proxy_http_version 1.1;
-    # proxy_set_header Upgrade $http_upgrade;
-    # proxy_set_header Connection "upgrade";
-    #}
-    # Other server directives go here, if needed
-    #}
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
 }
